<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="welcome">Look at my GUI</string>
    <string name="item1">Click here</string>
    <string name="chk">Check this out!</string>
    <string name="sw">Switch on / off</string>
    <string name="hinttext">Type here</string>
    <string name="emailAdd">Enter your email address:</string>
    <string name="passwd">Type your password:</string>
    <string name="nameHint">Enter your name</string>
    <string name="emailHint">Type email here</string>
    <string name="emailHint2">Enter your email</string>
    <string name="loginBtn">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="urName">Your name:</string>
    <string name="urEmail">Your email:</string>
    <string name="urPic">Your Picture:</string>
    <string name="message">Click the button above to take a picture</string>
    <string name="chatBtn">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="weatherbtn">Weather Forecast</string>
    <string name="toolbarBtn">Go to Toolbar page</string>
    <string name="aButton">Button</string>
    <string name="dialogMsg">What is your new message?</string>
    <string name="fragmentDelBtn">DELETE THIS MESSAGE</string>
</resources>
