<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/textProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <TextView android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urName" />

    <EditText
        android:id="@+id/userNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nameHint" />

    <TextView android:id="@+id/textUrEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urEmail" />

    <EditText
        android:id="@+id/userEmailAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint2" />

    <TextView android:id="@+id/textUrPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urPic" />

    <ImageButton
        android:id="@+id/yourPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>

    <TextView android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message" />

</LinearLayout>