<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/messageField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewEnd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendBtn"
        android:text="@string/send"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receiveBtn"
        android:text="@string/receive"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chatText"
        android:hint="@string/hinttext"
        android:inputType="text"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/sendBtn"
        android:layout_toStartOf="@+id/receiveBtn" />

</RelativeLayout>
